--- a/Visit-Banten/index.html
+++ b/Visit-Banten/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Visit Banten</title>
   </head>
   <body id="Home">
+    
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top">
@@ -30,7 +31,7 @@
               <a class="nav-link" href="#">Wisata</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="umkm/index.html">UMKM</a>
+              <a class="nav-link" href="#">UMKM</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Rencanakan Perjalanan</a>
@@ -38,6 +39,8 @@
             <li class="nav-item">
               <a class="nav-link" href="#Artikel">Artikel</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Profil">Profil</a>
           </ul>
         </div>
       </div>
@@ -50,13 +53,16 @@
     </section>
 
     <!-- Wisata -->
-    <section id="Wisata"></section>
+    <section id="Wisata">
+    </section>
 
     <!-- UMKM -->
-    <section id="Wisata"></section>
+    <section id="Wisata">
+    </section>
 
     <!-- Rencana Perjalanan -->
-    <section id="Wisata"></section>
+    <section id="Wisata">
+    </section>
 
     <!-- Artikel -->
     <section id="Artikel">
@@ -68,55 +74,43 @@
           <div class="row">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="IMG/badak.jpg" class="card-img-top" alt="Badak Bercula Satu" />
+                <img src="IMG/badak.jpg" class="card-img-top" alt="Badak Bercula Satu">
                 <div class="card-body">
-                  <p class="card-text">
-                    Badak Bercula Satu (Badak Jawa) diketahui masih di habitat aslinya yaitu Taman Nasional Ujung Kulon di ujung barat pulau Jawa. Selain di Banten, Hewan ini juga bisa ditemukan di Taman Nasional Cat Thien yang terletak
-                    sekitar 150 km sebelah utara Kota Ho Chi Minh. Vietnam.
-                  </p>
+                  <p class="card-text">Badak Bercula Satu (Badak Jawa) diketahui masih di habitat aslinya yaitu Taman Nasional Ujung Kulon di ujung barat pulau Jawa. Selain di Banten, Hewan ini juga bisa ditemukan di Taman Nasional Cat Thien yang terletak sekitar 150 km sebelah utara Kota Ho Chi Minh. Vietnam.</p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="IMG/Sunset-Anyer.png" class="card-img-top" alt="Pantai Anyer" />
+                <img src="IMG/Sunset-Anyer.png" class="card-img-top" alt="Pantai Anyer">
                 <div class="card-body">
-                  <p class="card-text">
-                    Menikmati Sunset di Pantai Anyer di penghujung hari. Pantai anyer berada di Kecamatan Anyer, Serang, Banten. karena berada di bagian barat pulau, membuat pantai ini memiliki daya tarik pemandangan matahari terbenam di
-                    sore hari.
-                  </p>
+                  <p class="card-text">Menikmati Sunset di Pantai Anyer di penghujung hari. Pantai anyer berada di Kecamatan Anyer, Serang, Banten. karena berada di bagian barat pulau, membuat pantai ini memiliki daya tarik pemandangan matahari terbenam di sore hari.</p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="IMG/masjid.jpg" class="card-img-top" alt="masjid Agung Banten" />
+                <img src="IMG/masjid.jpg" class="card-img-top" alt="masjid Agung Banten">
                 <div class="card-body">
-                  <p class="card-text">
-                    Masjid Agung Banten merupakan salah satu masjid tertua di Indonesia yang penuh dengan nilai sejarah. Masjid ini terletak di Banten Lama, Kota Serang, Provinsi Banten, Indonesia. Masjid ini adalah salah satu dari sedikit
-                    peninggalan yang tersisa dari bekas Kota Kuno Banten—pusat perdagangan paling makmur di Indonesia—setelah jatuhnya Kesultanan Demak pada pertengahan abad ke-16
-                  </p>
+                  <p class="card-text">Masjid Agung Banten merupakan salah satu masjid tertua di Indonesia yang penuh dengan nilai sejarah. Masjid ini terletak di Banten Lama, Kota Serang, Provinsi Banten, Indonesia. Masjid ini adalah salah satu dari sedikit peninggalan yang tersisa dari bekas Kota Kuno Banten—pusat perdagangan paling makmur di Indonesia—setelah jatuhnya Kesultanan Demak pada pertengahan abad ke-16</p>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="IMG/benteng.jpg" class="card-img-top" alt="Benteng Spilwijk">
+                <div class="card-body">
+                  <p class="card-text">Benteng Speelwijk adalah benteng peninggalan Belanda yang terletak di Kampung Pamarican, Desa Banten, Kecamatan Kasemen, Kota Serang. selain berwisata, disini ana juga bisa mempelajari sejarah Indonesia dari Peninggalan yang ada di Banten</p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="IMG/benteng.jpg" class="card-img-top" alt="Benteng Spilwijk" />
-                <div class="card-body">
-                  <p class="card-text">
-                    Benteng Speelwijk adalah benteng peninggalan Belanda yang terletak di Kampung Pamarican, Desa Banten, Kecamatan Kasemen, Kota Serang. selain berwisata, disini ana juga bisa mempelajari sejarah Indonesia dari Peninggalan
-                    yang ada di Banten
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="IMG/arumjeram.jpg" class="card-img-top" alt="Arum Jeram Banten" />
+                <img src="IMG/arumjeram.jpg" class="card-img-top" alt="Arum Jeram Banten">
                 <div class="card-body">
                   <p class="card-text">Untuk anda para wisatawan penyuka adrenalin, wajib mencoba wisata yang satu ini, yaitu arum jeram di sungai Ciberang, yang berada di Cipanas, Lebak, Banten.</p>
                 </div>
@@ -125,12 +119,13 @@
 
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="IMG/telagabiru.jpg" class="card-img-top" alt="Telaga Biru" />
+                <img src="IMG/telagabiru.jpg" class="card-img-top" alt="Telaga Biru">
                 <div class="card-body">
                   <p class="card-text">Untuk anda yang ingin menikmati wisata alam yang indah dan damai, ada destinasi wisata yang harus anda kunjungi, yaitu Telaga Biru Cigaru yang berada di Cisoka, Tangerang, Banten.</p>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -138,7 +133,10 @@
 
     <!-- footer -->
     <footer class="bg-primary text-white text-center p-1">
-      <p>Created @ <a class="text-white">KELOMPOK 6 PEMROGRAMAN WEB</a></p>
+      <p>
+        Created @ <a class="text-white">KELOMPOK 6 PEMROGRAMAN WEB</a>
+      </p>
     </footer>
+
   </body>
 </html>
