--- a/Visit-Banten/index.html
+++ b/Visit-Banten/index.html
@@ -18,7 +18,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Visit Banten</a>
+        <a class="navbar-brand" href="#">
+          <img src="IMG/logo3.png" alt="" width="120" height="40">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +42,7 @@
               <a class="nav-link" href="#Artikel">Artikel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Profil">Profil</a>
+              <a class="nav-link" href="#Profil">Profile</a>
           </ul>
         </div>
       </div>
