--- a/Visit-Banten/index.html
+++ b/Visit-Banten/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="IMG/logo3.png" alt="" width="120" height="40">
+          <img src="IMG/logo.png" alt="" width="120" height="40">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,14 +56,89 @@
 
     <!-- Wisata -->
     <section id="Wisata">
+      <div class="container">
+      <div class="row text-center">
+        <div class="col">
+        <h2>Destinasi Wisata</h2>
+        </div>
+        <p>Banten memiliki berbagai destinasi wisata yang dapat dikunjungi pada saat sedang berlibur.</p>
+        <div class="row">
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/1.jpg" class="card-img-top" alt="Taman Nasional">
+            <div class="card-body">
+              <h5 class="card-title">Taman Nasional Ujung Kulon</h5>
+              <p class="card-text">Taman Nasional Ujung Kulon Harga Tiket Masuk : Rp5.000 - Rp25.000. Jam Buka : 24 Jam. Nomor Telepon : +62253-801731. Alamat / Lokasi : Ujungjaya, Sumur, Pandeglang, Banten, Indonesia, 42284.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31696.528051041892!2d105.32561767157435!3d-6.761806367019464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e42233395979ea1%3A0x8df3a34e43b4c872!2sUjung%20Kulon%20National%20Park!5e0!3m2!1sen!2sid!4v1685958250872!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/2.jpg" class="card-img-top" alt="Telaga Biru">
+            <div class="card-body">
+              <h5 class="card-title">Telaga Biru Cisoka</h5>
+              <p class="card-text">Telaga Biru Cisoka Harga Tiket Masuk : Rp10.000. Jam Buka : 06.00 - 18.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Jalan Cigaru Cisoka, Cisoka, Tangerang, Banten, Indonesia, 15730.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.891442311502!2d106.42572597531132!3d-6.278000777494548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e4205d10e37390f%3A0xef38639adf05f086!2sTelaga%20Biru%20Cisoka!5e0!3m2!1sen!2sid!4v1685958435400!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/3.png" class="card-img-top" alt="Pantai Anyer">
+            <div class="card-body">
+              <h5 class="card-title">Pantai Anyer</h5>
+              <p class="card-text">Pantai Anyer Harga Tiket Masuk : Rp10.000 - Rp800.000. Jam Buka : 24 Jam. Nomor Telepon : -. Alamat / Lokasi : Jl. Raya Anyer, Bandulu, Serang, Banten, Indonesia, 42112.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15869.260153773586!2d105.87348583903533!3d-6.088191952367735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e4186aeccb6c0f1%3A0x1f555b24c077b26f!2sPantai%20Anyer!5e0!3m2!1sen!2sid!4v1685958501277!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/4.jpg" class="card-img-top" alt="Masjid Agung">
+            <div class="card-body">
+              <h5 class="card-title">Wisata Religi Masjid Agung</h5>
+              <p class="card-text">Masjid Agung Banten Harga Tiket Masuk : -. Jam Buka : 24 Jam. Nomor Telepon : -. Alamat / Lokasi : Jl. Komp. Masjid Agung Banten, RT./RW/RW.001/011, Banten, Kec. Kasemen, Kota Serang, Banten 42191.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.6986821531495!2d106.151443274451!3d-6.0360235939495475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e418cd5bc717595%3A0xfcd392b0b6fb096a!2sMasjid%20Agung%20Banten!5e0!3m2!1sen!2sid!4v1685958586537!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/5.jpg" class="card-img-top" alt="Tanjung">
+            <div class="card-body">
+              <h5 class="card-title">Tanjung Lesung</h5>
+              <p class="card-text">Pantai Tanjung Lesung Harga Tiket Masuk : Rp45.000. Jam Buka : 08.00-17.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Tanjungjaya, Pandeglang, Pandeglang, Banten, Indonesia, 42281.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.1681449304995!2d105.65460633845034!3d-6.479022698378204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e43c9b86a346b9d%3A0xec0d502e94af8656!2sTanjung%20Lesung%20Beach!5e0!3m2!1sen!2sid!4v1685959913633!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 25rem;">
+            <img src="IMG/wisata/6.jpeg" class="card-img-top" alt="Curug">
+            <div class="card-body">
+              <h5 class="card-title">Curug Putri Carita</h5>
+              <p class="card-text">Curug Putri Carita Harga Tiket Masuk : Rp35.000. Jam Buka : 07.30 WIB - 17.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Jl. Raya Carita, Sukarame, Carita, Pandeglang, Banten, Indonesia, 42264.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8475776547425!2d105.82592587531173!3d-6.283758577474286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e422d17f9379289%3A0x3e05eef92c2bb2c4!2sCURUG%20PUTRI%20CARITA%20(%20little%20green%20canyon%20banten)!5e0!3m2!1sen!2sid!4v1685958738287!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- UMKM -->
-    <section id="Wisata">
+    <section id="UMKM">
     </section>
 
     <!-- Rencana Perjalanan -->
-    <section id="Wisata">
+    <section id="Rencanakan Perjalanan">
     </section>
 
     <!-- Artikel -->
