--- a/Visit-Banten/index.html
+++ b/Visit-Banten/index.html
@@ -65,7 +65,7 @@
         <div class="row">
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/1.jpg" class="card-img-top" alt="Taman Nasional">
+            <img src="IMG/1.jpg" class="card-img-top" alt="Taman Nasional">
             <div class="card-body">
               <h5 class="card-title">Taman Nasional Ujung Kulon</h5>
               <p class="card-text">Taman Nasional Ujung Kulon Harga Tiket Masuk : Rp5.000 - Rp25.000. Jam Buka : 24 Jam. Nomor Telepon : +62253-801731. Alamat / Lokasi : Ujungjaya, Sumur, Pandeglang, Banten, Indonesia, 42284.</p>
@@ -77,7 +77,7 @@
 
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/2.jpg" class="card-img-top" alt="Telaga Biru">
+            <img src="IMG/2.jpg" class="card-img-top" alt="Telaga Biru">
             <div class="card-body">
               <h5 class="card-title">Telaga Biru Cisoka</h5>
               <p class="card-text">Telaga Biru Cisoka Harga Tiket Masuk : Rp10.000. Jam Buka : 06.00 - 18.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Jalan Cigaru Cisoka, Cisoka, Tangerang, Banten, Indonesia, 15730.</p>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/3.png" class="card-img-top" alt="Pantai Anyer">
+            <img src="IMG/3.png" class="card-img-top" alt="Pantai Anyer">
             <div class="card-body">
               <h5 class="card-title">Pantai Anyer</h5>
               <p class="card-text">Pantai Anyer Harga Tiket Masuk : Rp10.000 - Rp800.000. Jam Buka : 24 Jam. Nomor Telepon : -. Alamat / Lokasi : Jl. Raya Anyer, Bandulu, Serang, Banten, Indonesia, 42112.</p>
@@ -99,7 +99,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/4.jpg" class="card-img-top" alt="Masjid Agung">
+            <img src="IMG/4.jpg" class="card-img-top" alt="Masjid Agung">
             <div class="card-body">
               <h5 class="card-title">Wisata Religi Masjid Agung</h5>
               <p class="card-text">Masjid Agung Banten Harga Tiket Masuk : -. Jam Buka : 24 Jam. Nomor Telepon : -. Alamat / Lokasi : Jl. Komp. Masjid Agung Banten, RT./RW/RW.001/011, Banten, Kec. Kasemen, Kota Serang, Banten 42191.</p>
@@ -110,7 +110,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/5.jpg" class="card-img-top" alt="Tanjung">
+            <img src="IMG/5.jpg" class="card-img-top" alt="Tanjung">
             <div class="card-body">
               <h5 class="card-title">Tanjung Lesung</h5>
               <p class="card-text">Pantai Tanjung Lesung Harga Tiket Masuk : Rp45.000. Jam Buka : 08.00-17.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Tanjungjaya, Pandeglang, Pandeglang, Banten, Indonesia, 42281.</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 25rem;">
-            <img src="IMG/wisata/6.jpeg" class="card-img-top" alt="Curug">
+            <img src="IMG/6.jpeg" class="card-img-top" alt="Curug">
             <div class="card-body">
               <h5 class="card-title">Curug Putri Carita</h5>
               <p class="card-text">Curug Putri Carita Harga Tiket Masuk : Rp35.000. Jam Buka : 07.30 WIB - 17.00 WIB. Nomor Telepon : -. Alamat / Lokasi : Jl. Raya Carita, Sukarame, Carita, Pandeglang, Banten, Indonesia, 42264.</p>
